src/objects/ScoreCardCSRDashboard__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ScoreCardCSRDashboards</relationshipLabel>
        <relationshipName>ScoreCardCSRDashboards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORacle_Customer_Number__c</fullName>
        <label>ORacle Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Score__c</fullName>
        <label>Supplier Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ScoreCardCSRDashboard</label>
    <nameField>
        <label>ScoreCardCSRDashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScoreCardCSRDashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>